fix range styling on small screens

--- a/src/components/form/range/range.module.css
+++ b/src/components/form/range/range.module.css
@@ -18,11 +18,12 @@
 @media (max-width: 640px) {
   .container {
     gap: 0.5rem;
+    flex-wrap: wrap;
   }
 
   .range {
-    width: 100%;
     justify-content: end;
+    width: auto;
   }
 
   .small input {
